fix(root color): try to better split the concerns about background color
- apply the same background in both rootcolor and rootscrollgutter
- removed fallback to --color-base-100 in rootcolor because it is set in the same included file
- if rootcolor is not included then --root-bg is not set so by default background will be transparent, and when we have scroll gutter the scrollbar will be gray
- if rootscrollgutter is not included then we will not have grey on scroll gutter

This is not a fix for the issue, it's just a better separation of concerns between the 2 files

The issue is self-inflicted by setting the bg color in the base layer instead of a higher priority layer.

ref #4294

--- a/packages/daisyui/src/base/rootcolor.css
+++ b/packages/daisyui/src/base/rootcolor.css
@@ -1,6 +1,6 @@
 :root,
 [data-theme] {
-  background-color: var(--root-bg, var(--color-base-100));
+  background: var(--page-scroll-bg, var(--root-bg));
   color: var(--color-base-content);
 }
 
